[tool.poetry]
name = "pyspark-standard"
version = "0.1.0"
description = ""
authors = ["srikanth_holur <srikanth.holur@gmail.com>"]
readme = "README.md"
packages = [{include = "transformations"}]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.1"
black = "^24.4.0"
pytest = "^8.1.1"
pandas = "^2.2.2"
pyarrow = "^15.0.2"
pylint = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
